--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- IMAGEN: Agregar fotografía a una nueva carpeta img y en línea 27 agregar en src el /nombre.extension correcto -->
         <img
           class="d-block mx-auto mb-4 rounded-circle"
-          src="./img/"
+          src="./img/Captura.PNG"
           alt=""
           width="200"
           height="200"
