--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               style="border: none; background-color: black; color: aliceblue"
               type="button"
               class="btn btn-dark btn-lg px-4 gap-3"
-              onclick="location.href='https:/ '"
+              onclick="location.href='https://www.youtube.com/watch?v=NyuCQ2wE0DU'"
             >
               <i class="bi bi-github"></i>
               <!-- TEXTO: Cambiar a nombre de usuario u otro texto -->
@@ -58,7 +58,7 @@
               style="border: none; background-color: black; color: aliceblue"
               type="button"
               class="btn btn-dark btn-lg px-4 gap-3"
-              onclick="location.href='https:/ '"
+              onclick="location.href='https://www.facebook.com/'"
             >
               <i class="bi bi-linkedin"></i>
               <!-- TEXTO: Cambiar a nombre de usuario u otro texto -->
