otro cambio en color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <!-- COLOR: Cambiar "whitesmoke" por otro color -->
-  <body style="background-color: whitesmoke">
+  <body style="background-color: rgb(119, 156, 31)">
     <main>
       <div class="px-4 py-5 my-5 text-center">
         <!-- IMAGEN: Agregar fotografía a una nueva carpeta img y en línea 27 agregar en src el /nombre.extension correcto -->
@@ -40,7 +40,7 @@
             <!-- COLOR: Cambiar background-color y color a diferentes colores -->
             <!-- LINK: Cambiar el link a liga correcta hacia perfil de github entre las ' ' -->
             <button
-              style="border: none; background-color: black; color: aliceblue"
+              style="border: none; background-color: rgb(114, 74, 74); color: rgb(43, 65, 83)"
               type="button"
               class="btn btn-dark btn-lg px-4 gap-3"
               onclick="location.href='https:/ '"
@@ -52,7 +52,7 @@
             <!-- COLOR: Cambiar background-color y color a diferentes colores -->
             <!-- LINK: Cambiar el link a liga correcta hacia perfil de linkedin entre las ' ' -->
             <button
-              style="border: none; background-color: black; color: aliceblue"
+              style="border: none; background-color: rgb(206, 43, 43); color: rgb(182, 105, 16)"
               type="button"
               class="btn btn-dark btn-lg px-4 gap-3"
               onclick="location.href='https:/ '"
